refactor: trocar o toList para collect(Collector.toList)